package com.example.notes.util

object AppConstant {
    val NODE_LIST = "note_list"
    val NODE_DETAIL = "note_detail"
    val TITLE = "title"
    val DESCRIPTION = "description"
    val ADD_NOTE = "Add Note"
    val SAVE_NOTE = "Save Note"
    val MY_APP_URL ="myapp://"
    val NOTE_ID = "noteId"

}